--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, user-scalable=0, minimum-scale=1.0, maximum-scale=1.0" />
     <title>Document</title>
-    <script src='https://cdn.html5quintus.com/v0.2.0/quintus-all.js'></script>
+    <script src='quintus.js'></script>
     <script src="main.js"></script>
     <style>
     </style>
